# tinet-rs

./: Cargo.toml  README.md
.cargo/: config.toml
examples/: ob_query.rs
src/: client.rs  err.rs  lib.rs
src/call_detail_record/: mod.rs
src/call_detail_record/outbound/: dto.rs  mod.rs  model.rs  outbound.rs
src/utils/: mod.rs
