[package]
name = "tinet"
version = "0.1.0"
edition = "2021"
description = "天润融通rust版本sdk"
license = "MIT OR Apache-2.0"
repository = "https://github.com/shenshouer/tinet-rs"
keywords = ["tinet", "天润融通"]

[dependencies]
async-trait = "0.1.57"
dotenv = "0.15.0"
thiserror = "1.0.33"
tokio = { version = "1.20.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_repr = "0.1.9"
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0.85"
md5 = "0.7.0"
log = "0.4.17"

[dev-dependencies]
anyhow = "1.0.63"
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = { version = "0.4", features = ["serde"] }